// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroImage Renders to page 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HeroImage
    heroImage={
        Object {
            "datetime": "Mon Oct 02 2017",
            "id": "fZ8JNw4",
            "image": "https://i.imgur.com/fZ8JNw4.jpg",
            "score": 100,
            "tags": Array [
              "Funny",
              "Dog",
              "Action",
            ],
            "title": "Skateboarding Bulldog",
          }
    }
    history={
        Object {
            "push": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          id="HeroImageContainer"
>
          <div
                    id="HeroImageHeader"
          >
                    <img
                              alt="HeroImage"
                              id="HeroImage"
                              src="https://i.imgur.com/fZ8JNw4.jpg"
                    />
          </div>
          <p
                    id="HeroTitle"
          >
                    Skateboarding Bulldog
          </p>
          <p>
                    Tags: Funny, Dog, Action
          </p>
          <p>
                    Score: 100
          </p>
          <p>
                    Date: Mon Oct 02 2017
          </p>
</div>,
        <button
          onClick={[Function]}
>
          Back To Image Gallery
</button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              id="HeroImageHeader"
>
              <img
                            alt="HeroImage"
                            id="HeroImage"
                            src="https://i.imgur.com/fZ8JNw4.jpg"
              />
</div>,
            <p
              id="HeroTitle"
>
              Skateboarding Bulldog
</p>,
            <p>
              Tags: Funny, Dog, Action
</p>,
            <p>
              Score: 100
</p>,
            <p>
              Date: Mon Oct 02 2017
</p>,
          ],
          "id": "HeroImageContainer",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="HeroImage"
                id="HeroImage"
                src="https://i.imgur.com/fZ8JNw4.jpg"
/>,
              "id": "HeroImageHeader",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "alt": "HeroImage",
                "id": "HeroImage",
                "src": "https://i.imgur.com/fZ8JNw4.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Skateboarding Bulldog",
              "id": "HeroTitle",
            },
            "ref": null,
            "rendered": "Skateboarding Bulldog",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Tags: Funny, Dog, Action",
            },
            "ref": null,
            "rendered": "Tags: Funny, Dog, Action",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Score: 100",
            },
            "ref": null,
            "rendered": "Score: 100",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Date: Mon Oct 02 2017",
            },
            "ref": null,
            "rendered": "Date: Mon Oct 02 2017",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Back To Image Gallery",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Back To Image Gallery",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            id="HeroImageContainer"
>
            <div
                        id="HeroImageHeader"
            >
                        <img
                                    alt="HeroImage"
                                    id="HeroImage"
                                    src="https://i.imgur.com/fZ8JNw4.jpg"
                        />
            </div>
            <p
                        id="HeroTitle"
            >
                        Skateboarding Bulldog
            </p>
            <p>
                        Tags: Funny, Dog, Action
            </p>
            <p>
                        Score: 100
            </p>
            <p>
                        Date: Mon Oct 02 2017
            </p>
</div>,
          <button
            onClick={[Function]}
>
            Back To Image Gallery
</button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                id="HeroImageHeader"
>
                <img
                                alt="HeroImage"
                                id="HeroImage"
                                src="https://i.imgur.com/fZ8JNw4.jpg"
                />
</div>,
              <p
                id="HeroTitle"
>
                Skateboarding Bulldog
</p>,
              <p>
                Tags: Funny, Dog, Action
</p>,
              <p>
                Score: 100
</p>,
              <p>
                Date: Mon Oct 02 2017
</p>,
            ],
            "id": "HeroImageContainer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  alt="HeroImage"
                  id="HeroImage"
                  src="https://i.imgur.com/fZ8JNw4.jpg"
/>,
                "id": "HeroImageHeader",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "alt": "HeroImage",
                  "id": "HeroImage",
                  "src": "https://i.imgur.com/fZ8JNw4.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Skateboarding Bulldog",
                "id": "HeroTitle",
              },
              "ref": null,
              "rendered": "Skateboarding Bulldog",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Tags: Funny, Dog, Action",
              },
              "ref": null,
              "rendered": "Tags: Funny, Dog, Action",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Score: 100",
              },
              "ref": null,
              "rendered": "Score: 100",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Date: Mon Oct 02 2017",
              },
              "ref": null,
              "rendered": "Date: Mon Oct 02 2017",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Back To Image Gallery",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Back To Image Gallery",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HeroImage Renders to page with no tags 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HeroImage
    heroImage={
        Object {
            "datetime": "Mon Oct 02 2017",
            "image": "https://i.imgur.com/fZ8JNw4.jpg",
            "score": 100,
            "tags": Array [],
            "title": "Skateboarding Bulldog",
          }
    }
    history={
        Object {
            "push": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          id="HeroImageContainer"
>
          <div
                    id="HeroImageHeader"
          >
                    <img
                              alt="HeroImage"
                              id="HeroImage"
                              src="https://i.imgur.com/fZ8JNw4.jpg"
                    />
          </div>
          <p
                    id="HeroTitle"
          >
                    Skateboarding Bulldog
          </p>
          <p>
                    Tags: None :(
          </p>
          <p>
                    Score: 100
          </p>
          <p>
                    Date: Mon Oct 02 2017
          </p>
</div>,
        <button
          onClick={[Function]}
>
          Back To Image Gallery
</button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              id="HeroImageHeader"
>
              <img
                            alt="HeroImage"
                            id="HeroImage"
                            src="https://i.imgur.com/fZ8JNw4.jpg"
              />
</div>,
            <p
              id="HeroTitle"
>
              Skateboarding Bulldog
</p>,
            <p>
              Tags: None :(
</p>,
            <p>
              Score: 100
</p>,
            <p>
              Date: Mon Oct 02 2017
</p>,
          ],
          "id": "HeroImageContainer",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="HeroImage"
                id="HeroImage"
                src="https://i.imgur.com/fZ8JNw4.jpg"
/>,
              "id": "HeroImageHeader",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "alt": "HeroImage",
                "id": "HeroImage",
                "src": "https://i.imgur.com/fZ8JNw4.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Skateboarding Bulldog",
              "id": "HeroTitle",
            },
            "ref": null,
            "rendered": "Skateboarding Bulldog",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Tags: None :(",
            },
            "ref": null,
            "rendered": "Tags: None :(",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Score: 100",
            },
            "ref": null,
            "rendered": "Score: 100",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Date: Mon Oct 02 2017",
            },
            "ref": null,
            "rendered": "Date: Mon Oct 02 2017",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Back To Image Gallery",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Back To Image Gallery",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            id="HeroImageContainer"
>
            <div
                        id="HeroImageHeader"
            >
                        <img
                                    alt="HeroImage"
                                    id="HeroImage"
                                    src="https://i.imgur.com/fZ8JNw4.jpg"
                        />
            </div>
            <p
                        id="HeroTitle"
            >
                        Skateboarding Bulldog
            </p>
            <p>
                        Tags: None :(
            </p>
            <p>
                        Score: 100
            </p>
            <p>
                        Date: Mon Oct 02 2017
            </p>
</div>,
          <button
            onClick={[Function]}
>
            Back To Image Gallery
</button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                id="HeroImageHeader"
>
                <img
                                alt="HeroImage"
                                id="HeroImage"
                                src="https://i.imgur.com/fZ8JNw4.jpg"
                />
</div>,
              <p
                id="HeroTitle"
>
                Skateboarding Bulldog
</p>,
              <p>
                Tags: None :(
</p>,
              <p>
                Score: 100
</p>,
              <p>
                Date: Mon Oct 02 2017
</p>,
            ],
            "id": "HeroImageContainer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  alt="HeroImage"
                  id="HeroImage"
                  src="https://i.imgur.com/fZ8JNw4.jpg"
/>,
                "id": "HeroImageHeader",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "alt": "HeroImage",
                  "id": "HeroImage",
                  "src": "https://i.imgur.com/fZ8JNw4.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Skateboarding Bulldog",
                "id": "HeroTitle",
              },
              "ref": null,
              "rendered": "Skateboarding Bulldog",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Tags: None :(",
              },
              "ref": null,
              "rendered": "Tags: None :(",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Score: 100",
              },
              "ref": null,
              "rendered": "Score: 100",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Date: Mon Oct 02 2017",
              },
              "ref": null,
              "rendered": "Date: Mon Oct 02 2017",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Back To Image Gallery",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Back To Image Gallery",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
